<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calculator">

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.kayalprints.calculator.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_currency_converter"
        android:name="com.kayalprints.calculator.ui.currencyConversion.CurrencyConversionFragment"
        android:label="@string/menu_currency_converter"
        tools:layout="@layout/fragment_currency_convertor" />

    <fragment
        android:id="@+id/nav_unit_conversion"
        android:name="com.kayalprints.calculator.ui.unitConversion.UnitConversionFragment"
        android:label="@string/menu_unit_conversion"
        tools:layout="@layout/fragment_unit_convertor" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.kayalprints.calculator.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>