<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="inputHolder"
            type="com.kayalprints.calculator.CurrentInputHolder" />

        <variable
            name="clickListener"
            type="com.kayalprints.calculator.calculator.ui.CalculatorFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calculator.ui.CalculatorFragment">

        <TextView
            android:id="@+id/textViewHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:gravity="center|end"
            android:text="@{inputHolder.result}"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:gravity="center|end"
            android:text="@{inputHolder.hist}"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHistory" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/ac"
                android:textColor="#FF0000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                android:onClick="@{clickListener::ac}"/>

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/del"
                android:textColor="#EF6C00"
                android:textSize="25sp"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                android:onClick="@{clickListener::del}"/>

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/divide"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white"/>

            <Button
                android:id="@+id/buttonMulti"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/mul"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />


            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_7"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_8"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_9"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/sub"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_6"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_5"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_4"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/plus"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_3"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_2"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_1"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonExpo"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/x_y"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="4"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:background="#0075FA"
                android:backgroundTint="#0075FA"
                android:text="@string/eq"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#0075FA"
                android:onClick="@{clickListener::equal}"/>

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/dot"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white"
                android:onClick="@{clickListener::dot}"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_0"
                android:textColor="#0061FF"
                android:textSize="25sp"
                app:backgroundTint="@color/white" />


        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>